--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,42 +18,44 @@
 
 <div class="container">
   <div class="row mx-2">
-    <div class="col-12">
-      <button class="btn btn-success m-1">
-        <i class="fa fa-whatsapp">
-          Kirim WhatsApp
-        </i>
-      </button>
-
-      <button class="btn btn-success m-1">
-        <i class="fa fa-plus">
-          Record Baru
-        </i>
-      </button>
-
-      <button class="btn btn-danger m-1">
-        <i class="fa fa-trash">
-          Hapus Record
-        </i>
-      </button>
-
-      <button class="btn btn-warning m-1">
-        <i class="fa fa-edit">
-          Ubah Record
-        </i>
-      </button>
-
-      <button class="btn btn-info mx-1">
-        <i class="fa fa-search">
-          Pencarian
-        </i>
-      </button>
-
-      <button class="btn btn-default mx-1">
-        <i class="fa fa-times">
-          Batal
-        </i>
-      </button>
+    <div class="container mb-4">
+      <div class="col-12">
+        <button class="btn btn-success m-1">
+          <i class="fa fa-whatsapp">
+            Kirim WhatsApp
+          </i>
+        </button>
+  
+        <button class="btn btn-success m-1">
+          <i class="fa fa-plus">
+            Record Baru
+          </i>
+        </button>
+  
+        <button class="btn btn-danger m-1">
+          <i class="fa fa-trash">
+            Hapus Record
+          </i>
+        </button>
+  
+        <button class="btn btn-warning m-1">
+          <i class="fa fa-edit">
+            Ubah Record
+          </i>
+        </button>
+  
+        <button class="btn btn-info m-1">
+          <i class="fa fa-search">
+            Pencarian
+          </i>
+        </button>
+  
+        <button class="btn btn-default m-1">
+          <i class="fa fa-times">
+            Batal
+          </i>
+        </button>
+      </div>
     </div>
 
     <div class="col-12">
@@ -68,47 +70,86 @@
     </div>
 
     <div class="container py-4">
-      <div class="dropdown-menu d-block position-static pt-0 mx-0 rounded-3 shadow overflow-hidden w-280px" data-bs-theme="light">
-        <form class="p-2 mb-2 bg-body-tertiary border-bottom">
-          <input type="search" class="form-control" autocomplete="false" placeholder="Type to filter...">
-        </form>
-        <ul class="list-unstyled mb-0">
-          <li><a class="dropdown-item d-flex align-items-center gap-2 py-2" href="#">
-            <span class="d-inline-block bg-success rounded-circle p-1"></span>
-            Action
-          </a></li>
-          <li><a class="dropdown-item d-flex align-items-center gap-2 py-2" href="#">
-            <span class="d-inline-block bg-primary rounded-circle p-1"></span>
-            Another action
-          </a></li>
-          <li><a class="dropdown-item d-flex align-items-center gap-2 py-2" href="#">
-            <span class="d-inline-block bg-danger rounded-circle p-1"></span>
-            Something else here
-          </a></li>
-          <li><a class="dropdown-item d-flex align-items-center gap-2 py-2" href="#">
-            <span class="d-inline-block bg-info rounded-circle p-1"></span>
-            Separated link
-          </a></li>
-        </ul>
+      <div class="input-group mb-2">
+        <span class="input-group-text" id="basic-addon1">&#64;</span>
+        <input type="text" class="form-control" placeholder="instagram" aria-label="Username" aria-describedby="basic-addon1">
+      </div>
+      <div class="input-group mb-3">
+        <input type="text" class="form-control" placeholder="email" aria-label="Recipient's username" aria-describedby="basic-addon2">
+        <span class="input-group-text" id="basic-addon2">&#64;google.com</span>
       </div>
     </div>
-    
-    <div class="modal modal-sheet position-static d-block p-2 py-md-3" tabindex="-1" role="dialog" id="modalSheet">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content rounded-4 shadow">
-          <div class="modal-header border-bottom-0">
-            <h1 class="modal-title fs-5">Modal title</h1>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body py-0">
-            <p>This is a modal sheet, a variation of the modal that docs itself to the bottom of the viewport like the newer share sheets in iOS.</p>
-          </div>
-          <div class="modal-footer flex-column align-items-stretch w-100 gap-2 pb-3 border-top-0">
-            <button type="button" class="btn btn-lg btn-primary">Save changes</button>
-            <button type="button" class="btn btn-lg btn-secondary" data-bs-dismiss="modal">Close</button>
-          </div>
-        </div>
-      </div>
+
+    <div class="container">
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th scope="col">No</th>
+            <th scope="col">Nama Mhs</th>
+            <th scope="col">Kelas</th>
+            <th scope="col">Prodi</th>
+            <th scope="col">Instagram</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Ayub</td>
+            <td>3C2</td>
+            <td>TI/TI</td>
+            <td>&#64;aaayuuubb</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Sukron</td>
+            <td>3C2</td>
+            <td>TI/TI</td>
+            <td>&#64;winsky</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td>Ragiel</td>
+            <td>3C2</td>
+            <td>TI/TI</td>
+            <td>&#64;aeroxflush</td>
+          </tr>
+        </tbody>
+      </table>
+
+      <table class="table table-bordered table-dark">
+        <thead>
+          <tr>
+            <th scope="col">No</th>
+            <th scope="col">Nama Mhs</th>
+            <th scope="col">Kelas</th>
+            <th scope="col">Prodi</th>
+            <th scope="col">Instagram</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Ayub</td>
+            <td>3C2</td>
+            <td>TI/TI</td>
+            <td>&#64;aaayuuubb</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Sukron</td>
+            <td>3C2</td>
+            <td>TI/TI</td>
+            <td>&#64;winsky</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td>Ragiel</td>
+            <td>3C2</td>
+            <td>TI/TI</td>
+            <td>&#64;aeroxflush</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
 
     <div class="container">
