--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -80,7 +80,7 @@
       </div>
     </div>
 
-    <div class="container">
+    <div class="table-responsive">
       <table class="table table-bordered">
         <thead>
           <tr>
@@ -88,6 +88,7 @@
             <th scope="col">Nama Mhs</th>
             <th scope="col">Kelas</th>
             <th scope="col">Prodi</th>
+            <th scope="col">Peminatan</th>
             <th scope="col">Instagram</th>
           </tr>
         </thead>
@@ -97,6 +98,7 @@
             <td>Ayub</td>
             <td>3C2</td>
             <td>TI/TI</td>
+            <td>IS</td>
             <td>&#64;aaayuuubb</td>
           </tr>
           <tr>
@@ -104,6 +106,7 @@
             <td>Sukron</td>
             <td>3C2</td>
             <td>TI/TI</td>
+            <td>IS</td>
             <td>&#64;winsky</td>
           </tr>
           <tr>
@@ -111,11 +114,14 @@
             <td>Ragiel</td>
             <td>3C2</td>
             <td>TI/TI</td>
+            <td>IS</td>
             <td>&#64;aeroxflush</td>
           </tr>
         </tbody>
       </table>
+    </div>
 
+    <div class="table-responsive">
       <table class="table table-bordered table-dark">
         <thead>
           <tr>
@@ -123,6 +129,7 @@
             <th scope="col">Nama Mhs</th>
             <th scope="col">Kelas</th>
             <th scope="col">Prodi</th>
+            <th scope="col">Peminatan</th>
             <th scope="col">Instagram</th>
           </tr>
         </thead>
@@ -132,6 +139,7 @@
             <td>Ayub</td>
             <td>3C2</td>
             <td>TI/TI</td>
+            <td>IS</td>
             <td>&#64;aaayuuubb</td>
           </tr>
           <tr>
@@ -139,6 +147,7 @@
             <td>Sukron</td>
             <td>3C2</td>
             <td>TI/TI</td>
+            <td>IS</td>
             <td>&#64;winsky</td>
           </tr>
           <tr>
@@ -146,6 +155,7 @@
             <td>Ragiel</td>
             <td>3C2</td>
             <td>TI/TI</td>
+            <td>IS</td>
             <td>&#64;aeroxflush</td>
           </tr>
         </tbody>
